<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="10dp"
        android:minHeight="46dp"
        app:layout_collapseMode="pin"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="141dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/list_restaurant_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/generic_restaurant" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/dateTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/inspection_date_on_viol" />

                <TextView
                    android:id="@+id/inspectionType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/inspection_type_on_viol" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/hazardTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/hazard_on_viol" />

                    <ImageView
                        android:id="@+id/hazardImg"
                        android:layout_width="3dp"
                        android:layout_height="24dp"
                        android:layout_weight="1"
                        app:srcCompat="@mipmap/ic_launcher" />

                    <TextView
                        android:id="@+id/list_restaurant_text_level"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hazard_level_on_viol" />

                    <LinearLayout
                        android:id="@+id/list_restaurant_layout_dangerColor"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/hazardColour"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/critNum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/critical_issues_found" />

                <TextView
                    android:id="@+id/nonCritNum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/non_critical_issues_found" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <ListView
        android:id="@+id/violationList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>
