<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/dialog_download_loading_button_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/common_google_signin_btn_text_dark_disabled"
                app:srcCompat="@drawable/ic_close_black_24dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/dialog_download_loading_text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="TextView"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/restaurant_on_download" />

                    <ProgressBar
                        android:id="@+id/dialog_download_loading_bar_restaurant"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="20dp"
                        android:layout_height="20dp" />

                    <ImageView
                        android:id="@+id/dialog_download_loading_image_restaurant"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        app:srcCompat="@drawable/ic_check_black_24dp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/dialog_download_loading_text_restaurant_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/waiting_on_restaurant_download" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/inspection_report_on_download" />

                    <ProgressBar
                        android:id="@+id/dialog_download_loading_bar_inspection"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="20dp"
                        android:layout_height="20dp" />

                    <ImageView
                        android:id="@+id/dialog_download_loading_image_inspection"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        app:srcCompat="@drawable/ic_check_black_24dp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/dialog_download_loading_text_inspection_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/waiting_on_inspection_download" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
